# aws-lambda-docker-local-dev-sample

./: LICENSE  README.md  docker-compose.yaml
aws_lambda_sample/: Dockerfile  lint.bash  setup.cfg  setup.py
aws_lambda_sample/aws_lambda/: app.py
balancer/: pyproject.toml
balancer/balancer/: api.py  app.py
balancer/balancer/openapi/: openapi.yaml
balancer/scripts/: run_server.py
client_sample/: pyproject.toml
client_sample/client_sample/: __init__.py
client_sample/scripts/: multi_connection.py  single_connection.py
docker_src/aws_lambda/: Dockerfile  pyproject.toml  setup.cfg
docker_src/balancer/: Dockerfile  pyproject.toml
docker_src/balancer/balancer/: api.py
src/aws_lambda/: pyproject.toml
src/aws_lambda/aws_lambda/: app.py
