[tool.poetry]
name = "aws_lambda"
version = "0.1.0"
description = ""
authors = ["curekoshimizu <45332899+curekoshimizu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-typing = "^1.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
